[gd_scene load_steps=12 format=2]

[ext_resource path="res://menus/victory/scripts/victory.gd" type="Script" id=1]
[ext_resource path="res://menus/victory/state_scripts/idle.gd" type="Script" id=2]
[ext_resource path="res://menus/victory/state_scripts/process.gd" type="Script" id=3]
[ext_resource path="res://menus/victory/state_scripts/exit.gd" type="Script" id=4]
[ext_resource path="res://menus/common/animations/SETUP.tres" type="Animation" id=5]
[ext_resource path="res://menus/common/animations/slide-in.tres" type="Animation" id=6]
[ext_resource path="res://menus/common/animations/slide-out.tres" type="Animation" id=7]
[ext_resource path="res://menus/common/spritesheets/kenney_nl/greySheet.png" type="Texture" id=8]
[ext_resource path="res://menus/victory/scripts/menu-buttons.gd" type="Script" id=9]
[ext_resource path="res://menus/common/prefabs/general_menu_button/scenes/GeneralMenuButton.tscn" type="PackedScene" id=10]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 191, 100, 99, 98 )

[node name="Victory" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -720.0
margin_bottom = -720.0
script = ExtResource( 1 )

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="Process" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Exit" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SETUP = ExtResource( 5 )
anims/slide-in = ExtResource( 6 )
anims/slide-out = ExtResource( 7 )

[node name="BackPanel" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 450.0
margin_top = 250.0
margin_right = -450.0
margin_bottom = -250.0
texture = SubResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MenuButtons" type="VBoxContainer" parent="BackPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
script = ExtResource( 9 )

[node name="Rematch" parent="BackPanel/MenuButtons" instance=ExtResource( 10 )]
margin_left = 40.0
margin_top = 31.0
margin_right = 340.0
margin_bottom = 81.0
rect_min_size = Vector2( 300, 50 )
rect_pivot_offset = Vector2( 0, 0 )
size_flags_horizontal = 4
text = "Rematch"

[node name="MainMenu" parent="BackPanel/MenuButtons" instance=ExtResource( 10 )]
margin_left = 40.0
margin_top = 85.0
margin_right = 340.0
margin_bottom = 135.0
rect_min_size = Vector2( 300, 50 )
rect_pivot_offset = Vector2( 0, 0 )
size_flags_horizontal = 4
text = "Main Menu"

[node name="ExitGame" parent="BackPanel/MenuButtons" instance=ExtResource( 10 )]
margin_left = 40.0
margin_top = 139.0
margin_right = 340.0
margin_bottom = 189.0
rect_min_size = Vector2( 300, 50 )
rect_pivot_offset = Vector2( 0, 0 )
size_flags_horizontal = 4
text = "Exit Game"

[connection signal="pressed" from="BackPanel/MenuButtons/Rematch" to="." method="_on_Rematch_pressed"]
[connection signal="pressed" from="BackPanel/MenuButtons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="BackPanel/MenuButtons/ExitGame" to="." method="_on_ExitGame_pressed"]
